--- a/PWordle.html
+++ b/PWordle.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onload="loadPage()">
-    <div class="headerContainer">
+    <div class="headerContainer" id="headerContainer">
         Guess The Five Letter Word!
     </div>
     <div class="letterEntry">
