--- a/PWordle.html
+++ b/PWordle.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="helpBox" id="helpBox">
+    <!--     <div class="helpBox" id="helpBox"> -->
         
     </div>
 
